added: Environment Variables

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -33,6 +33,25 @@ decoration {
 layerrule = blur, waybar
 layerrule = ignorealpha 0.2, waybar
 
+############################
+##  ENVIRONMENT VARIABLES ##
+##  --------------------- ##
+################################################################
+#                                                              #
+# Prefer Wayland with sane fallbacks
+#
+env = QT_QPA_PLATFORM,wayland;xcb
+env = GDK_BACKEND,wayland,x11          ########################################################
+env = SDL_VIDEODRIVER,wayland ########## if a game breaks, unset per-app                      # 
+env = CLUTTER_BACKEND,wayland          # Some SDL games won’t start with Wayland.             #
+#                                      # Launch them with: env -u SDL_VIDEODRIVER game-binary #
+#                                      ########################################################
+# Qt tweaks
+# 
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+#                                                              # 
+################################################################ 
 
 $mod = SUPER
 bind = $mod, SPACE, exec, rofi -no-xresources -show drun
