--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,6 +1,13 @@
 monitor=DP-1,2560x1440@144,0x0,1
 monitor=HDMI-A-1,1920x1280@60,-1080x-480,1,transform,3
 
+# Star-Citizen palette:
+$sc_bg = rgb(0e141b) # deep slate
+$sc_cyan = rgb(14d8ff) # UI Cyan
+$sc_orange = rgb(ff9e00) # warning/accent
+$sc_text = rgb(c7d0d9) # light text
+$sc_muted = rgb(6b7a88) # muted border 
+
 input {
   kb_layout = no
   kb_variant =
@@ -16,19 +23,38 @@ general {
 	gaps_in = 6
 	gaps_out = 12
 	border_size = 1
+  col.active_border = $sc_cyan $sc_orange 45deg
+  col.inactive_border = $sc_muted
 	layout = dwindle 
 }
 
 decoration { 
-	rounding = 0
-	blur {
+	rounding = 2
+  shadow {
+    enabled = true
+    color = rgba(20,216,255,0.25)
+    color_inactive = rgba(14,20,27,0.18)
+	}
+  blur {
 		enabled = true
 		size = 10
 		passes = 2
 	}
-	active_opacity = 1.0
+	active_opacity = 0.98
 	inactive_opacity = 0.85
 }
+
+group {
+    col.border_active = $sc_cyan
+    col.border_inactive = $sc_muted
+  }
+
+animations {
+    enabled = yes
+    bezier = scEase, 0.2, 0.9, 0.2, 1.0
+    animation = border, 1, 6, scEase
+  }
+
 
 layerrule = blur, waybar
 layerrule = ignorealpha 0.2, waybar
@@ -42,7 +68,7 @@ layerrule = ignorealpha 0.2, waybar
 #
 env = QT_QPA_PLATFORM,wayland;xcb
 env = GDK_BACKEND,wayland,x11          ########################################################
-env = SDL_VIDEODRIVER,wayland ########## if a game breaks, unset per-app                      # 
+# env = SDL_VIDEODRIVER,wayland ########## if a game breaks, unset per-app                      # 
 env = CLUTTER_BACKEND,wayland          # Some SDL games won’t start with Wayland.             #
 #                                      # Launch them with: env -u SDL_VIDEODRIVER game-binary #
 #                                      ########################################################
@@ -124,4 +150,10 @@ windowrulev2 = center, class:^(WebApp-ChatGPT)$
 windowrulev2 = size 1200 800, class:^(WebApp-ChatGPT)$
 # optional dedicated workspace:
 # windowrulev2 = workspace 9, class:^(WebApp-ChatGPT)$
+#
+# Star-Citizen #
+
+windowrulev2 = fullscreen, class:^(StarCitizen)$
+windowrulev2 = nofocus, class:^(StarCitizen)$
+windowrulev2 = opaque, class:^(StarCitizen)$
 
