--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = /home/zrgst/Pictures/Wallpapers/Anime-style/City-Rainy-Night.png
-wallpaper = ,/home/zrgst/Pictures/Wallpapers/Anime-style/City-Rainy-Night.png
+preload = /home/zrgst/Pictures/Wallpapers/Gaming/shockbreaker-and-security-A18.jpg
+wallpaper = DP-1,/home/zrgst/Pictures/Wallpapers/Gaming/shockbreaker-and-security-A18.jpg
 
