Added: Walker binding (in place of Rofi)

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -80,7 +80,7 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 ################################################################ 
 
 $mod = SUPER
-bind = $mod, SPACE, exec, rofi -no-xresources -show drun
+bind = $mod, SPACE, exec, walker
 bind = $mod, Return, exec, ghostty
 bind = $mod, B, exec, zen-browser
 bind = $mod, E, exec, dolphin
@@ -136,6 +136,8 @@ exec-once = hyprpaper &
 exec-once = waybar &
 # exec-once = swayosd-server & (SLETTES)
 # exec-once = waybar -o DP-1 &
+exec-once = walker --gapplication-service
+
 
 windowrulev2 = float, class:^(rofi)$
 windowrulev2 = center, class:^(rofi)$
