Added: exec-once: elephant &

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -136,6 +136,7 @@ exec-once = hyprpaper &
 exec-once = waybar &
 # exec-once = swayosd-server & (SLETTES)
 # exec-once = waybar -o DP-1 &
+exec-once = elephant &
 exec-once = walker --gapplication-service
 
 
