Added: theme for walker

--- a/config/walker/config.toml
+++ b/config/walker/config.toml
@@ -1,5 +1,5 @@
 #/home/zrgst/.config/walker/config.toml
-theme = "default"
+theme = "gruvbox"
 
 force_keyboard_focus = true                                                 # forces keyboard focus to stay in Walker
 close_when_open = true                                                      # close Walker when invoking while already opened
@@ -7,7 +7,7 @@ selection_wrap = true                                                       # wr
 click_to_close = true                                                       # closes Walker if clicking outside of the main content area.
 global_argument_delimiter = "#"                                             # query: firefox#https://benz.dev => part after delimiter will be ignored when querying. this should be the same as in the elephant config
 exact_search_prefix = "'"                                                   # disable fuzzy searching
-theme = "omarchy-default"                                                   # theme to use
+# theme = "omarchy-default"                                                   # theme to use
 disable_mouse = false                                                       # disable mouse (on input and list only)
 # additional_theme_location = "~/.local/share/omarchy/default/walker/themes/"
 
